# FlashSpec

./: .gitignore  .readthedocs.yaml  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  PUBLISHING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml  gpu_tests.yml
benchmarks/: README.md  baselines.py  benchmark_kernels.py  compare_baselines.py  run_all.py  sweep_draft_sizes.py  sweep_gamma.py
benchmarks/configs/: llama3_70b.yaml  llama3_8b.yaml  mistral_7b.yaml
benchmarks/results/: baseline.json  draft_size_sweep.csv  flashspec_ucb_tiny_llama.json  gamma_sweep.csv
deploy/: Dockerfile  docker-compose.yml
deploy/k8s/: flashspec-deployment.yaml
docs/: architecture.md  bandit.md  benchmarks.md  index.md  kernels.md  mkdocs.yml  requirements.txt
docs/api/: index.md
flashspec/: __init__.py
flashspec/bandit/: __init__.py  base.py  oracle.py  thompson.py  ucb.py
flashspec/engine/: __init__.py  drafter.py  speculative.py  verifier.py
flashspec/export/: __init__.py  onnx.py
flashspec/kernels/: __init__.py  _reference.py  gather_kernel.py  verify_kernel.py
flashspec/metrics/: __init__.py  acceptance.py  latency.py  throughput.py
flashspec/sampling/: __init__.py  rejection.py  typical.py
flashspec/utils/: __init__.py  config.py  device.py  logging.py
notebooks/: 01_quickstart.ipynb  01_quickstart.py  02_bandit_analysis.ipynb  03_kernel_profiling.ipynb  Colab_Benchmarks_T4.ipynb  README.md
paper/: Makefile  flashspec.bib  flashspec.tex
paper/figures/: .gitkeep
paper/joss/: README.md  paper.bib  paper.md
scripts/: check_regression.py  download_models.py  export_draft.py  profile_kernel.py  update_benchmark_results.py
social/: linkedin_post.md  release_v0.1.4.md  x_thread.md
tests/: conftest.py
tests/chaos/: test_bandit_adversarial.py
tests/integration/: test_e2e_greedy.py  test_e2e_sampling.py  test_onnx_parity.py
tests/unit/: test_acceptance.py  test_bandit.py  test_config.py  test_sampling.py  test_verify_kernel.py
